<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivities.LoginActivity"
    android:background="@color/navy100">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center"
        />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp">

                <include layout="@layout/selfscore_header"></include>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/navy30"
                android:text="Log In"
                android:textSize="17sp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:visibility="visible"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorWhite"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/colorWhite"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorWhite">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/colorWhite"
                    android:paddingLeft="10dp"/>


            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:background="@drawable/mybutton_yellow"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pumpkin"
                android:text="Unable to log in?"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/unablelogin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/navy30"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New to SelfScore?"
                android:layout_marginTop="35dp"
                android:textSize="22sp"
                android:textColor="@color/navy20"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/apply_now_button"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Apply Now"
                android:textSize="25sp"
                android:textStyle="normal"
                android:textColor="@color/colorWhite"
                android:background="@drawable/my_button_applynow" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
